compiler/tests/ar/errors/pure_impure_call.salam
// لغة: العربية
// توقع: E012
دالة طابع(قيمة : صحيح) : صحيح:
    اطبع(قيمة)
    أرجع قيمة
نهاية

نقي دالة ضعف(قيمة : صحيح) : صحيح:
    أرجع طابع(قيمة) * 2
نهاية

دالة الرئيسية:
    اطبع(ضعف(3))
نهاية
